--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -13,7 +13,8 @@
         android:id="@+id/textView"
         android:layout_width="214dp"
         android:layout_height="28dp"
-        android:text="Ya tienes Cuenta? Logueate!"
+        android:textColor="@color/light_gray"
+        android:text="@string/registerToLogin"
         android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -106,17 +107,11 @@
         android:id="@+id/textViewErrekaFitRregistrer"
         android:layout_width="214dp"
         android:layout_height="41dp"
-        android:background="@color/white"
-        android:outlineAmbientShadowColor="#FFFFFF"
-        android:outlineSpotShadowColor="#FFFFFF"
-        android:shadowColor="#FFFFFF"
+        android:background="@color/dark_gray"
         android:text="@string/register"
         android:textAlignment="center"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        android:textColor="#EF6C00"
-        android:textColorHighlight="#F80000"
-        android:textColorHint="#FF0000"
-        android:textColorLink="#260000"
+        android:textColor="#FFC107"
         android:textSize="34sp"
         app:layout_constraintBottom_toTopOf="@+id/imageView2"
         app:layout_constraintEnd_toEndOf="parent"
