--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -11,15 +11,8 @@
         android:id="@+id/textViewErrekaFit"
         android:layout_width="178dp"
         android:layout_height="51dp"
-        android:outlineAmbientShadowColor="#FFFFFF"
-        android:outlineSpotShadowColor="#FFFFFF"
-        android:shadowColor="#FFFFFF"
         android:text="@string/errekafit"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        android:textColor="#FFC107"
-        android:textColorHighlight="#F80000"
-        android:textColorHint="#FF0000"
-        android:textColorLink="#260000"
         android:textSize="34sp"
         app:layout_constraintBottom_toTopOf="@+id/guideline"
         app:layout_constraintEnd_toEndOf="parent"
@@ -35,7 +28,6 @@
         android:layout_height="40dp"
         android:gravity="center"
         android:text="@string/loginTextView"
-        android:textColor="#FFC107"
         android:textSize="27sp"
         app:layout_constraintBottom_toTopOf="@+id/guideline2"
         app:layout_constraintEnd_toEndOf="parent"
@@ -52,10 +44,9 @@
         android:clickable="true"
         android:gravity="center"
         android:text="@string/noAccountTextView"
-        android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.518"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button"
         tools:ignore="DuplicateIds,TextSizeCheck,VisualLintBounds" />
@@ -65,15 +56,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:autofillHints=""
-        android:backgroundTint="@color/white"
-        android:contentDescription="@string/enter_password"
+        android:backgroundTint="#a3b1af"
         android:ems="10"
         android:hint="@string/passLogin"
         android:inputType="textPassword"
         android:labelFor="@id/editTextPassword"
         android:minHeight="48dp"
-        android:textColor="#FFC107"
-        android:textColorHint="#9E9E9E"
         app:layout_constraintBottom_toTopOf="@+id/guideline4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.502"
@@ -86,15 +74,12 @@
         android:id="@+id/editTextLogin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:backgroundTint="@color/white"
         android:ems="10"
         android:hint="@string/userLogin"
         android:importantForAutofill="no"
         android:inputType="text"
         android:labelFor="@id/editTextLogin"
         android:minHeight="48dp"
-        android:textColor="#FFC107"
-        android:textColorHint="#9E9E9E"
         app:layout_constraintBottom_toTopOf="@+id/guideline4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.502"
@@ -103,13 +88,14 @@
         app:layout_constraintVertical_bias="0.158"
         tools:ignore="LabelFor,SpeakableTextPresentCheck" />
 
-     <com.google.android.material.checkbox.MaterialCheckBox
+
+    <com.google.android.material.checkbox.MaterialCheckBox
         android:id="@+id/checkBox"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Remenber me "
+        android:layout_width="198dp"
+        android:layout_height="62dp"
         android:checked="true"
-        android:textColor="#FFC107"
+        android:gravity="center"
+        android:text="Remenber me"
         app:layout_constraintBottom_toTopOf="@+id/button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -117,19 +103,17 @@
         app:layout_constraintTop_toTopOf="@+id/guideline4"
         tools:ignore="HardcodedText,VisualLintBounds" />
 
-
     <Button
         android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:backgroundTint="@color/black"
+        style="@style/button_style"
+        android:layout_width="155dp"
+        android:layout_height="59dp"
         android:text="@string/loginButton"
-        android:textColor="#FFD600"
-        app:layout_constraintBottom_toTopOf="@+id/guideline5"
+        app:layout_constraintBottom_toTopOf="@+id/textViewRegister"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.501"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/guideline4"
+        app:layout_constraintTop_toBottomOf="@+id/checkBox"
         tools:ignore="HardcodedText,VisualLintBounds" />
 
     <androidx.constraintlayout.widget.Guideline
@@ -172,7 +156,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.211"
-        app:srcCompat="@mipmap/ic_launcher"
+        app:srcCompat="@mipmap/errekafit_foreground"
         tools:ignore="ContentDescription,ImageContrastCheck" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
