--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -3,7 +3,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="@color/dark_gray"
     android:layout_height="match_parent">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -17,6 +16,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/NameInputText"
+            android:minHeight="48dp"
             android:textColor="@color/white"
             android:textColorHint="@color/light_gray"
             app:layout_constraintBottom_toTopOf="@+id/guideline13"
@@ -190,7 +190,7 @@
             android:id="@+id/spinner3"
             android:layout_width="133dp"
             android:layout_height="61dp"
-            android:textColor="@color/white"
+            style="@style/spinner_style"
             app:layout_constraintBottom_toTopOf="@+id/userIdFiled"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/spinner2"
