--- a/app/src/main/res/layout/activity_trainer.xml
+++ b/app/src/main/res/layout/activity_trainer.xml
@@ -35,7 +35,7 @@
         app:layout_constraintEnd_toStartOf="@+id/textView3"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@mipmap/ic_launcher"
+        app:srcCompat="@mipmap/errekafit_foreground"
         tools:ignore="ContentDescription,ImageContrastCheck" />
 
 
@@ -43,7 +43,6 @@
         android:id="@+id/workoutFilteringBtn"
         android:layout_width="131dp"
         android:layout_height="62dp"
-        android:backgroundTint="@color/black"
         android:text="@string/filterButton"
         app:layout_constraintBottom_toTopOf="@+id/guideline9"
         app:layout_constraintEnd_toEndOf="parent"
@@ -56,7 +55,6 @@
         android:id="@+id/workoutBackBtn"
         android:layout_width="114dp"
         android:layout_height="48dp"
-        android:backgroundTint="@color/black"
         android:text="@string/buttonBack"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/videoButton"
@@ -69,7 +67,6 @@
         android:id="@+id/videoButton"
         android:layout_width="194dp"
         android:layout_height="48dp"
-        android:backgroundTint="@color/black"
         android:text="@string/videoButtonTxt"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -81,7 +78,6 @@
         android:id="@+id/trainerModifyButton"
         android:layout_width="114dp"
         android:layout_height="48dp"
-        android:backgroundTint="@color/black"
         android:text="@string/modifyButton"
         app:layout_constraintBottom_toTopOf="@+id/guideline9"
         app:layout_constraintEnd_toEndOf="parent"
@@ -94,7 +90,6 @@
         android:id="@+id/trainerDeleteBtn"
         android:layout_width="114dp"
         android:layout_height="48dp"
-        android:backgroundTint="@color/black"
         android:text="@string/deleteButton"
         app:layout_constraintBottom_toTopOf="@+id/guideline9"
         app:layout_constraintEnd_toStartOf="@+id/trainerAddBtn"
@@ -107,7 +102,6 @@
         android:id="@+id/trainerAddBtn"
         android:layout_width="114dp"
         android:layout_height="48dp"
-        android:backgroundTint="@color/black"
         android:text="@string/addButton"
         app:layout_constraintBottom_toTopOf="@+id/guideline9"
         app:layout_constraintEnd_toStartOf="@+id/trainerModifyButton"
@@ -122,7 +116,6 @@
         android:layout_height="47dp"
         android:gravity="center"
         android:text="@string/trainerTitle"
-        android:textColor="#FFC107"
         android:textSize="30sp"
         app:layout_constraintBottom_toTopOf="@+id/guideline11"
         app:layout_constraintEnd_toEndOf="parent"
@@ -157,14 +150,12 @@
         android:id="@+id/editNumberText"
         android:layout_width="241dp"
         android:layout_height="68dp"
-        android:backgroundTint="@color/white"
         android:ems="10"
         android:hint="@string/filterHint"
         android:importantForAutofill="no"
         android:inputType="number"
         android:labelFor="@id/editTextLogin"
         android:minHeight="48dp"
-        android:textColorHint="#9E9E9E"
         app:layout_constraintBottom_toTopOf="@+id/guideline9"
         app:layout_constraintEnd_toStartOf="@+id/workoutFilteringBtn"
         app:layout_constraintHorizontal_bias="0.5"
