--- a/app/src/main/res/layout/activity_workouts.xml
+++ b/app/src/main/res/layout/activity_workouts.xml
@@ -15,7 +15,7 @@
         app:layout_constraintEnd_toStartOf="@+id/textView3"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@mipmap/ic_launcher"
+        app:srcCompat="@mipmap/errekafit_foreground"
         tools:ignore="ContentDescription,ImageContrastCheck" />
 
 
@@ -23,7 +23,6 @@
         android:id="@+id/profileButton"
         android:layout_width="114dp"
         android:layout_height="48dp"
-        android:backgroundTint="@color/black"
         android:text="@string/changeToProfile"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -35,7 +34,6 @@
         android:id="@+id/workoutFilteringBtn"
         android:layout_width="131dp"
         android:layout_height="62dp"
-        android:backgroundTint="@color/black"
         android:text="@string/filterButton"
         app:layout_constraintBottom_toTopOf="@+id/guideline9"
         app:layout_constraintEnd_toEndOf="parent"
@@ -48,7 +46,6 @@
         android:id="@+id/workoutBackBtn"
         android:layout_width="114dp"
         android:layout_height="48dp"
-        android:backgroundTint="@color/black"
         android:text="@string/buttonBack"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/trainerButton"
@@ -60,7 +57,6 @@
         android:id="@+id/trainerButton"
         android:layout_width="127dp"
         android:layout_height="48dp"
-        android:backgroundTint="@color/black"
         android:text="@string/trainerButton"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/profileButton"
@@ -74,7 +70,6 @@
         android:layout_height="47dp"
         android:gravity="center"
         android:text="@string/workouts"
-        android:textColor="#FFC107"
         android:textSize="40sp"
         app:layout_constraintBottom_toTopOf="@+id/guideline11"
         app:layout_constraintEnd_toEndOf="parent"
@@ -111,7 +106,6 @@
         android:layout_height="27dp"
         android:gravity="center"
         android:text="@string/userLvl"
-        android:textColor="@color/white"
         android:textSize="17sp"
         app:layout_constraintBottom_toTopOf="@+id/editNumberText"
         app:layout_constraintEnd_toEndOf="parent"
@@ -123,14 +117,12 @@
         android:id="@+id/editNumberText"
         android:layout_width="241dp"
         android:layout_height="68dp"
-        android:backgroundTint="@color/white"
         android:ems="10"
         android:hint="@string/filterHint"
         android:importantForAutofill="no"
         android:inputType="number"
         android:labelFor="@id/editTextLogin"
         android:minHeight="48dp"
-        android:textColorHint="#9E9E9E"
         app:layout_constraintBottom_toTopOf="@+id/guideline9"
         app:layout_constraintEnd_toStartOf="@+id/workoutFilteringBtn"
         app:layout_constraintHorizontal_bias="0.5"
