--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,8 +1,12 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
-    <style name="Base.Theme.GymAppXML" parent="Theme.Material3.DayNight.NoActionBar">
-        <item name="android:background">@color/dark_gray</item>
+<resources>
+
+    <style name="nightTheme" parent="Theme.AppCompat.NoActionBar">
+        <item name="android:background">@color/darkBackground</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:editTextColor">@color/white</item>
+    </style>
+
+    <style name="spinner_style">
+        <item name="android:textColor">@color/white</item>
     </style>
 </resources>
