--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -9,4 +9,10 @@
     <style name="spinner_style">
         <item name="android:textColor">@color/white</item>
     </style>
+
+    <style name="button_style" parent="@android:style/TextAppearance">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:background">@color/darkBackground</item>
+    </style>
+
 </resources>
