Revert "ultimas correcciones para la rubrica"
This reverts commit b385b0a27a04ac5d3d384a6878518b714b129b72.

--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -9,27 +9,16 @@
     tools:layout_editor_absoluteX="-13dp"
     tools:layout_editor_absoluteY="-7dp">
 
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="177dp"
-        android:layout_height="148dp"
-        android:contentDescription="@string/todo"
-        app:layout_constraintBottom_toTopOf="@+id/textViewErrekaFitRregistrer"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.211"
-        app:srcCompat="@mipmap/errekafit_foreground"
-        tools:ignore="ContentDescription,ImageContrastCheck" />
-
     <TextView
         android:id="@+id/textView"
         android:layout_width="214dp"
         android:layout_height="28dp"
+        android:textColor="@color/light_gray"
         android:text="@string/registerToLogin"
         android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button2"
         tools:ignore="HardcodedText,TextSizeCheck" />
@@ -42,10 +31,13 @@
         android:hint="@string/editTextSurname"
         android:inputType="text"
         android:minHeight="48dp"
+        android:textColorHint="#546E7A"
         app:layout_constraintBottom_toTopOf="@+id/editTextTextEmailAddress"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextname"
+        app:layout_constraintVertical_bias="0.5"
         tools:ignore="Autofill,HardcodedText,LabelFor" />
 
     <EditText
@@ -56,10 +48,13 @@
         android:hint="@string/editTextTextEmailAddress"
         android:inputType="textEmailAddress"
         android:minHeight="48dp"
+        android:textColorHint="#546E7A"
         app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextSurname"
+        app:layout_constraintVertical_bias="0.5"
         tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck" />
 
     <Spinner
@@ -69,8 +64,10 @@
         android:hint="@string/spinner"
         app:layout_constraintBottom_toTopOf="@+id/button2"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextDate" />
+        app:layout_constraintTop_toBottomOf="@+id/editTextDate"
+        app:layout_constraintVertical_bias="0.5" />
 
     <EditText
         android:id="@+id/editTextDate"
@@ -80,26 +77,14 @@
         android:hint="@string/editTextDate"
         android:inputType="date"
         android:minHeight="48dp"
+        android:textColorHint="#546E7A"
         app:layout_constraintBottom_toTopOf="@+id/spinner"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
+        app:layout_constraintVertical_bias="0.5"
         tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck" />
-
-    <EditText
-        android:id="@+id/loginTextname"
-        android:layout_width="214dp"
-        android:layout_height="51dp"
-        android:ems="10"
-        android:hint="@string/login"
-        android:inputType="text"
-        android:minHeight="48dp"
-        app:layout_constraintBottom_toTopOf="@+id/editTextname"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textViewErrekaFitRregistrer"
-        tools:ignore="Autofill,DuplicateSpeakableTextCheck,HardcodedText,LabelFor" />
 
     <EditText
         android:id="@+id/editTextname"
@@ -109,10 +94,13 @@
         android:hint="@string/editTextname"
         android:inputType="text"
         android:minHeight="48dp"
+        android:textColorHint="#546E7A"
         app:layout_constraintBottom_toTopOf="@+id/editTextSurname"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/loginTextname"
+        app:layout_constraintTop_toBottomOf="@+id/imageView2"
+        app:layout_constraintVertical_bias="0.5"
         tools:ignore="Autofill,DuplicateSpeakableTextCheck,HardcodedText,LabelFor" />
 
     <TextView
@@ -122,11 +110,15 @@
         android:text="@string/register"
         android:textAlignment="center"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:textColor="#FFC107"
         android:textSize="34sp"
-        app:layout_constraintBottom_toTopOf="@+id/loginTextname"
+        app:layout_constraintBottom_toTopOf="@+id/imageView2"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView2"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.5"
+        app:layout_constraintVertical_chainStyle="packed"
         tools:ignore="TextSizeCheck" />
 
     <Button
@@ -134,10 +126,12 @@
         android:layout_width="214dp"
         android:layout_height="48dp"
         android:text="Registrarse"
-        app:layout_constraintBottom_toTopOf="@+id/textView"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/spinner"
+        app:layout_constraintTop_toTopOf="@+id/guideline6"
+        app:layout_constraintVertical_bias="0.503"
         tools:ignore="HardcodedText" />
 
     <EditText
@@ -148,11 +142,27 @@
         android:hint="@string/editTextTextPassword"
         android:inputType="textPassword"
         android:minHeight="48dp"
+        android:textColorHint="#546E7A"
         app:layout_constraintBottom_toTopOf="@+id/editTextDate"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress"
+        app:layout_constraintVertical_bias="0.5"
         tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck" />
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="214dp"
+        android:layout_height="174dp"
+        android:layout_marginBottom="9dp"
+        app:layout_constraintBottom_toTopOf="@+id/editTextname"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editTextname"
+        tools:ignore="ContentDescription,ImageContrastCheck"
+        tools:srcCompat="@tools:sample/avatars" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline6"
